[project]
name = "comfyui-cc_llama_vision"
description = "Yet another llama_cpp node. GGUF-focused vision-language captioning via llama-server, with automatic server lifecycle management and VRAM-safe handoff."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/doggeddalle/ComfyUI-cc_llama_vision"

[tool.comfy]
PublisherId = "doggeddalle"
DisplayName = "CC Llama Vision"