[project]
name = "comfyui-cc_llama_vision"
description = "Yet another llama_cpp node. GGUF-focused vision-language captioning via llama-server, with automatic server lifecycle management and VRAM-safe handoff."
version = "1.0.3"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "doggeddalle" }]
keywords = ["comfyui", "llama", "vision", "caption", "llama.cpp"]
dependencies = [
    "numpy",
    "requests",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/doggeddalle/ComfyUI-cc_llama_vision"
Repository = "https://github.com/doggeddalle/ComfyUI-cc_llama_vision"
Issues = "https://github.com/doggeddalle/ComfyUI-cc_llama_vision/issues"

[tool.comfy]
PublisherId = "doggeddalle"
DisplayName = "CC Llama Vision"